Update Swagger Docs Create tests for API Remove CarDB function Create README
